<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@android:color/background_dark">
    <TableRow
        android:background="@android:color/darker_gray">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="Hello TableLayout"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
    </TableRow>
<TableRow>
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/table_layout_4_open"
            android:padding="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/table_layout_4_open_shortcut"
            android:gravity="right"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/table_layout_4_save"
            android:padding="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/table_layout_4_save_shortcut"
            android:gravity="right"
            android:padding="10dp"
            android:textColor="@color/white"/>
</TableRow>
    <TableRow>
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/table_layout_4_save_as"
            android:padding="10dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="@string/table_layout_4_save_as_shortcut"
            android:gravity="right"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>
    <TableRow>
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/table_layout_4_import"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow>
    <TextView
        android:layout_marginLeft="10dp"
        android:text="@string/table_layout_4_export"
        android:padding="10dp"
        android:textColor="@color/white"/>
    <TextView
        android:text="@string/table_layout_4_export_shortcut"
        android:gravity="right"
        android:padding="10dp"
        android:textColor="@color/white"/>
</TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>
    <TableRow>
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/table_layout_4_Quit"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </TableRow>
</TableLayout>